add active class functionality on navbar

--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -30,3 +30,7 @@ body{
     -ms-overflow-style: none; /* For Internet Explorer and Edge */
   }
   
+  .active{
+    text-decoration: underline;
+    
+  }
